upgrading helm charts

--- a/Azure/HelmCharts/helm-poc-telepreco/templates/bff.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/templates/bff.yaml
@@ -1,3 +1,19 @@
+# This yaml deploys telepreco BFF alone on k8s.
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: deploy-poc-telepreco-bff
+spec:
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: poc-telepreco-bff
+    spec:
+      containers:
+      - name: mcarbabybfftelepreco
+        image: rodoflho/mcarbabybfftelepreco:latest
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,22 +23,8 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 11001
+  - port: 80
     targetPort: 80
   selector:
     app: poc-telepreco-bff
----
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: deploy-poc-telepreco-bff
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: poc-telepreco-bff
-    spec:
-      containers:
-      - name: mcarbabybfftelepreco
-        image: rodoflho/mcarbabybfftelepreco:latest
+  
