--- a/Azure/HelmCharts/helm-poc-telepreco/Chart.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/Chart.yaml
@@ -1,5 +1,10 @@
 apiVersion: v1
 name: poc-telepreco
-version: 0.1.1
+version: 0.1.11
 description: POC de telepreço em microservices.
-appVersion: 0.0.1
+appVersion: 0.0.2
+dependencies:
+  - name: rabbitmq-ha
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 1.41.0
+    alias: rabbitmq
