--- a/Azure/HelmCharts/helm-poc-telepreco/Chart.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/Chart.yaml
@@ -1,10 +1,19 @@
 apiVersion: v1
 name: poc-telepreco
-version: 0.1.11
+version: 0.1.13
 description: POC de telepreço em microservices.
 appVersion: 0.0.2
+
 dependencies:
   - name: rabbitmq-ha
     repository: https://kubernetes-charts.storage.googleapis.com
     version: 1.41.0
     alias: rabbitmq
+  - name: mongodb
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 7.8.8
+    alias: mongodb
+  - name: postgresql
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 8.6.2
+    alias: postgresql
