improving story and charts

--- a/Azure/HelmCharts/helm-poc-telepreco/charts/bff-asterisk/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/bff-asterisk/templates/Pod.yaml
@@ -2,14 +2,14 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: deploy-poc-telepreco-bff
+  name: deploy-poc-telepreco-bff-asterisk
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: poc-telepreco-bff
+        app: poc-telepreco-bff-asterisk
     spec:
       containers:
-      - name: mcarbabybfftelepreco
-        image: rodoflho/mcarbabybfftelepreco:latest
+      - name: mcarbabybffteleprecoasterisk
+        image: rodoflho/mcarbabybffteleprecoasterisk:latest
