--- a/Azure/HelmCharts/helm-poc-telepreco/charts/atendimento/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/atendimento/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarmicroserviceattendance
         image: rodoflho/mcarmicroserviceattendance:latest
+        imagePullPolicy: Always
