--- a/Azure/HelmCharts/helm-poc-telepreco/charts/bff-asterisk/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/bff-asterisk/templates/Pod.yaml
@@ -13,3 +13,4 @@ spec:
       containers:
       - name: mcarbabybffteleprecoasterisk
         image: rodoflho/mcarbabybffteleprecoasterisk:latest
+        imagePullPolicy: Always
