--- a/Azure/HelmCharts/helm-poc-telepreco/charts/estoque/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/estoque/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroserviceestoque
         image: rodoflho/mcarbabymicroserviceestoque:latest
+        imagePullPolicy: Always
