--- a/Azure/HelmCharts/helm-poc-telepreco/charts/frontend/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/frontend/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroservicefrontend
         image: rodoflho/babypocfrontvue:latest
+        imagePullPolicy: Always
