--- a/Azure/HelmCharts/helm-poc-telepreco/charts/orcamento/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/orcamento/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarmicroserviceorcamento
         image: rodoflho/mcarmicroserviceorcamento:latest
+        imagePullPolicy: Always
