--- a/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarmicroservicepessoa
         image: rodoflho/mcarmicroservicepessoa:latest
+        imagePullPolicy: Always
