--- a/Azure/HelmCharts/helm-poc-telepreco/charts/produto/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/produto/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroserviceproduto
         image: rodoflho/mcarbabymicroserviceproduto:latest
+        imagePullPolicy: Always
