--- a/Azure/HelmCharts/helm-poc-telepreco/charts/sac/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/sac/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroservicesac
         image: rodoflho/mcarbabymicroservicesac:latest
+        imagePullPolicy: Always
