--- a/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
@@ -13,3 +13,4 @@ spec:
       containers:
       - name: mcarbabybfftelepreco
         image: rodoflho/mcarbabybfftelepreco:latest
+        imagePullPolicy: Always
