--- a/Azure/HelmCharts/helm-poc-telepreco/charts/cliente/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/cliente/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroservicecliente
         image: rodoflho/mcarbabymicroservicecliente:latest
+        imagePullPolicy: Always
