--- a/Azure/HelmCharts/helm-poc-telepreco/templates/JobClusterInit.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/templates/JobClusterInit.yaml
@@ -8,6 +8,7 @@ metadata:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
     "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
 spec:
   template:
     metadata:
