--- a/Azure/HelmCharts/helm-poc-telepreco/values.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/values.yaml
@@ -6,4 +6,8 @@ mongodb:
   usePassword: false
 postgresql:
   postgresqlPassword: postgres
+nginx-ingress:
+  controller.replicaCount: 2
+  controller.nodeSelector."beta\.kubernetes\.io/os": linux
+  defaultBackend.nodeSelector."beta\.kubernetes\.io/os": linux
   
