--- a/Azure/HelmCharts/helm-poc-telepreco/charts/atendimento/values.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/atendimento/values.yaml
@@ -1,5 +1,6 @@
 image:
-    repository: brunobck
-    name: mcarmicroserviceattendance
-    tag: "latest"
+    name: microservice-atendimento
+    tag: "2.1"
 replicaCount: 1
+label:
+    name: atendimento
