repositorio do dockerhub foi substituido pelo acr(Azure) da mercado car

--- a/Azure/HelmCharts/helm-poc-telepreco/charts/asterisk/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/asterisk/templates/Pod.yaml
@@ -11,5 +11,5 @@ spec:
     spec:
       containers:
       - name: mcarbabymicroserviceasterisk
-        image: rodoflho/mcarbabyasterisk:latest
+        image: mcarimageregistry.azurecr.io/baby-microservice-asterisk:latest
         imagePullPolicy: Always
