--- a/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
@@ -12,5 +12,5 @@ spec:
     spec:
       containers:
       - name: mcarbabybfftelepreco
-        image: rodoflho/mcarbabybfftelepreco:latest
+        image: mcarimageregistry.azurecr.io/baby-bff-telepreco:latest
         imagePullPolicy: Always
