--- a/Azure/HelmCharts/helm-poc-telepreco/charts/estoque/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/estoque/templates/Pod.yaml
@@ -11,5 +11,5 @@ spec:
     spec:
       containers:
       - name: mcarbabymicroserviceestoque
-        image: rodoflho/mcarbabymicroserviceestoque:latest
+        image: mcarimageregistry.azurecr.io/baby-microservice-estoque:latest
         imagePullPolicy: Always
