--- a/Azure/HelmCharts/helm-poc-telepreco/charts/frontend/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/frontend/templates/Pod.yaml
@@ -11,5 +11,5 @@ spec:
     spec:
       containers:
       - name: mcarbabymicroservicefrontend
-        image: rodoflho/babypocfrontvue:latest
+        image: mcarimageregistry.azurecr.io/baby-frontvue:latest
         imagePullPolicy: Always
