--- a/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
@@ -11,5 +11,5 @@ spec:
     spec:
       containers:
       - name: mcarmicroservicepessoa
-        image: rodoflho/mcarmicroservicepessoa:latest
+        image: mcarimageregistry.azurecr.io/microservice-pessoa:latest
         imagePullPolicy: Always
