--- a/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/bff/templates/Pod.yaml
@@ -2,15 +2,15 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: deploy-poc-telepreco-bff
+  name: deploy-{{ .Release.Name }}-{{ .Values.label.name }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       labels:
-        app: poc-telepreco-bff
+        app: {{ .Values.appBffLabel }}
     spec:
       containers:
-      - name: mcarbabybfftelepreco
-        image: mcarimageregistry.azurecr.io/baby-bff-telepreco:latest
+      - name: {{ .Values.image.name }}
+        image: {{ .Values.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: Always
