--- a/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
+++ b/Azure/HelmCharts/helm-poc-telepreco/charts/pessoa/templates/Pod.yaml
@@ -1,15 +1,15 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: deploy-poc-telepreco-pessoa
+  name: deploy-{{ .Release.Name }}-{{ .Values.label.name }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       labels:
-        app: poc-telepreco-bff-pessoa
+        app: {{ .Values.appBffLabel }}-{{ .Values.label.name }}
     spec:
       containers:
-      - name: mcarmicroservicepessoa
-        image: mcarimageregistry.azurecr.io/microservice-pessoa:latest
+      - name: {{ .Values.image.name }}
+        image: {{ .Values.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         imagePullPolicy: Always
